Use bindings for vault cards (#2928)